# template-nodelet

./: CMakeLists.txt  README.md  mrs_create_nodelet_template.sh  package.xml  plugins.xml
include/: example.h
launch/: example.launch
src/: example.cpp
